traefik/rancher/rancher-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-x-forwarded-proto
  namespace: cattle-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      Connection: "Upgrade"
      Upgrade: "websocket"
