traefik/rancher/rancher-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-rancher-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rancher.guven.uk`)
      kind: Rule
      middlewares:
        - name: add-x-forwarded-proto
          namespace: cattle-system
      services:
        - name: rancher
          port: 443
